<resources>
    <string name="app_name">evaluacion2LabMoviles</string>
    <string name="codigo">SM16-I04-001</string>
    
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="igual">=</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="por">*</string>
    <string name="division">/</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="punto">.</string>
    <string name="abrir">(</string>
    <string name="cerrar">)</string>
</resources>
