<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtOperandos"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/boton_redondo1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/txtRespuesta"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/boton_redondo1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnAC"
                android:text="@string/ac"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:background="@drawable/boton_redondo1"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnDEL"
                android:text="@string/del"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo1"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnMas"
                android:text="@string/mas"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo1"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnMenos"
                android:text="@string/menos"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo1"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSiete"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/siete"
                android:textAllCaps="false"
                android:background="@drawable/boton_redondo"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnOcho"
                android:text="@string/ocho"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnNueve"
                android:text="@string/nueve"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnDivision"
                android:text="@string/division"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo1"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnCuatro"
                android:text="@string/cuatro"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:background="@drawable/boton_redondo"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnCinco"
                android:text="@string/cinco"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnSeis"
                android:text="@string/seis"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnMultiplicacion"
                android:text="@string/por"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo1"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnUno"
                android:text="@string/uno"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:background="@drawable/boton_redondo"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnDos"
                android:text="@string/dos"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnTres"
                android:text="@string/tres"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnIgual"
                android:text="@string/igual"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/boton_redondo1"
                android:textAllCaps="false"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnCero"
                android:text="@string/cero"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:background="@drawable/boton_redondo"
                android:layout_margin="2dp"
                android:textSize="25sp"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>